--- a/styles/Summary.module.scss
+++ b/styles/Summary.module.scss
@@ -13,7 +13,7 @@
   width: 100%;
 
   padding: 0.5rem 1rem;
-  background-color: var(--secondary);
+  background-color: var(--midnight-hover);
   border-radius: 0.2rem;
 
   img {
@@ -48,7 +48,7 @@
     z-index: 1;
 
     .nickname {
-      background: var(--tertiary);
+      background: var(--midnight-primary);
       margin-left: -32%;
       padding: 0.1rem 0.4rem 0;
       border-radius: 4px;
@@ -61,7 +61,7 @@
   img {
     image-rendering: pixelated;
     image-rendering: crisp-edges;
-    width: 162%;
+    width: 200%;
     margin-left: -32%;
   }
 
@@ -82,7 +82,7 @@
   .playerName {
     position: absolute;
     top: -42%;
-    color: var(--tertiary);
+    color: var(--midnight-hover);
     font-size: 4rem;
     font-weight: bold;
     text-align: center;
@@ -100,11 +100,13 @@
 
   &Divider {
     flex: 1;
-    border-bottom: 1px solid var(--tertiary);
+    border-bottom: 1px solid var(--midnight-primary);
   }
 }
 
 .dualContainer {
+  @apply mt-6;
+
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -132,7 +134,7 @@
   }
 
   &Count {
-    color: var(--text-caption);
+    color: var(--text-disabled);
     padding: 0 0.2rem;
     margin-bottom: 0.4rem;
   }
