--- a/styles/Pokemon.module.scss
+++ b/styles/Pokemon.module.scss
@@ -35,8 +35,7 @@
     position: relative;
 
     img {
-      max-width: 100%;
-      max-height: 100%;
+      position: absolute;
     }
   }
 }
@@ -62,6 +61,13 @@
     width: 80%;
 
     &Img {
+      @apply flex items-center justify-center;
+
+      width: 96px;
+      height: 96px;
+      color: var(--text-caption);
+      font-size: 1.5rem;
+
       image-rendering: crisp-edges;
       image-rendering: pixelated;
     }
