--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,8 +5,8 @@
   justify-content: center;
   align-items: center;
 
-  background-image: linear-gradient(#071e3e7c, #071e3e 300px),
-    url("/sootopolis.png");
+  background-image:
+    linear-gradient(#071e3e7c, #071e3e 300px), url("/sootopolis.png");
   background-position: top center;
   background-repeat: no-repeat;
 }
@@ -48,12 +48,37 @@
   text-align: left;
 }
 
+.startButton {
+  font-size: 1.1rem;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.25rem;
+  background-color: var(--purple-primary);
+  color: var(--text-primary);
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
 .description {
   line-height: 1.5;
   font-size: 1.1rem;
   color: var(--text-caption);
   font-weight: lighter;
   font-family: var(--code-font);
+}
+
+.list {
+  margin: 0.5rem 0 1rem 2rem;
+  padding: 0;
+  list-style: disc;
+  color: var(--text-caption);
+  line-height: 1.65;
+  font-size: 1.1rem;
+  font-family: var(--code-font);
+}
+
+.list li {
+  margin-bottom: 0.5rem;
 }
 
 .title {
